--- a/jcvideoplayer-lib/build.gradle
+++ b/jcvideoplayer-lib/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '24.0.3'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.1'
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 23
-        versionCode 47
-        versionName "4.8.3"
+        minSdkVersion 16
+        targetSdkVersion 25
+        versionCode 57
+        versionName "5.5.2"
     }
     buildTypes {
         release {
@@ -24,13 +24,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-//    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-
-    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.4'
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.4'
-    compile 'tv.danmaku.ijk.media:ijkplayer-arm64:0.7.4'
-    compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.7.4'
-    compile 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.7.4'
+    compile 'com.android.support:appcompat-v7:25.1.0'
 }
 
+//apply from: '../gradle/maven_push.gradle'
