更改了一些类名

--- a/videoplayer-lib/src/main/AndroidManifest.xml
+++ b/videoplayer-lib/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="fm.jiecao.jcvideoplayer_lib">
+    package="com.yixun.videoplayer">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
