--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    compile project(':jcvideoplayer-lib')
-    compile project(':xutils')
-    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile project(':videoplayer-lib')
+    compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
 }
